--- a/2.1 Heading Element/index.html
+++ b/2.1 Heading Element/index.html
@@ -8,4 +8,5 @@
     <h2>Chapter 3</h2>
       <h3>Section 1</h3>
       <h3>Section 2 </h3>
+      <a href="../3.1 Nesting and Indentation/index.html">Nesting and Indentation page</a>
   <p>I am working on this project to achieve better in my life Alhamdulilah</p>
