--- a/3.3 Image Elements/index.html
+++ b/3.3 Image Elements/index.html
@@ -1,8 +1,6 @@
+<!-- Kitten image URL -->
+https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg"/>
 
-
-    <!-- Puppy image URL -->
-    https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
-    >
-    <img src="C:\Users\Farhad Rashid Reshi\Desktop\MyPicture" />
+<!-- Puppy image URL -->
+https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
