--- a/2.3 Void Elements/favourateMove.html
+++ b/2.3 Void Elements/favourateMove.html
@@ -1,6 +1,6 @@
 <h1>Best Books According to the Farhad</h1>
 
-<h2>My Top 3 recommended movies are</h2>
+<h2>My Top 3 recommended Books are</h2>
 <hr/>
 <p>
     1. Quran <br>
