--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -1,19 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    <h5>I am QA-Developer</h5>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Project Project</a>
-    <img src="./public/movie_project.PNG"><h4>Movie Project</h4><hr>
-    <a href="../4.3 HTML Porfolio Project/birthday_invite.html"><h4>BirthDay Project</h4></a>
-    <img src="./public/Birthday Project.PNG">
 
-    <a href="../4.3 HTML Porfolio Project/public/about.html"> About</a> <br>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact</a>
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+</head>
+
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
 </body>
+
 </html>
