--- a/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
+++ b/4.3+HTML+Portfolio+Project/4.3 HTML Porfolio Project/index.html
@@ -4,17 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <title>Angela's Portfolio</title>
+  <style>
+    .movie
+    {
+      height:250px ;
+      width: 150;
+      display: inline-block;
+      background-color: red;
+      position: relative;
+    }
+    .birthday
+    {
+      height:250px ;
+      width: 250px;
+      display: inline-block;
+      position:absolute;
+    }
+
+  </style>
 </head>
 
 <body>
   <h1>Angela Yu's Portfolio</h1>
   <h2>I'm a Web Developer</h2>
-  <hr />
-  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
-  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
-  <hr />
+ 
+  <div>
+    <p><a href="./public/movie-ranking.html">Movie Ranking Project</a><p>
+    <img class="movie" src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  </div>
+ 
+  <div>
+    <p ><a href="./public/birthday-invite.html">Birthday Invite Project</a></p>
+    <img class="birthday" src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  </div>
+  
   <a href="./public/about.html">About Me</a>
   <a href="./public/contact.html">Contact Me</a>
 </body>
