--- a/9.1+Flex+Direction/9.1 Flex Direction/index.html
+++ b/9.1+Flex+Direction/9.1 Flex Direction/index.html
@@ -15,7 +15,9 @@
       border: 5px solid gold;
       display:inline-flex;
       flex-direction:column;
+      flex-wrap: nowrap;
       
+
     }
 
     /*
@@ -33,6 +35,7 @@ children of the .container class.
     .blue {background-color: #4834d4;}
     .indigo {background-color: #30336b;}
     .purple {background-color: #be2edd;}
+   
   </style>
 </head>
 
