--- a/11.0+Bootstrap+Intro/11.0 Bootstrap Intro/BootStrapLayout.html
+++ b/11.0+Bootstrap+Intro/11.0 Bootstrap Intro/BootStrapLayout.html
@@ -8,9 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
   <style>
-  
-    .flex-container
+    .container
     {
+      color: blue;
       display: flex;
       height: 100vh;
       justify-content: center;
@@ -18,23 +18,15 @@
     }
  </style>
 </head>
-
 <body>
- <div class="flex-container">
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <img src="./flower.jpg" class="card-img-top" alt="Sunflower">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="container-sm">
+    <div class="row-sm">
+      <div class="col-sm">Hello</div>
+      <div class="col-sm">Hello</div>
+      <div class="col-sm">Hello</div>
+      <div class="col-sm">Hello</div>
     </div>
-
-
   </div>
-
- </div>
 </body>
 
 </html>
