--- a/11.3+TinDog+Project/11.3 TinDog Project/index.html
+++ b/11.3+TinDog+Project/11.3 TinDog Project/index.html
@@ -38,9 +38,73 @@
   <section id="features">
 
   </section>
-  <!-- Testimonial -->
   <section id="testimonial">
-
+    <div class="container">
+    <div class="container px-4 py-5" id="hanging-icons">
+      <h2 class="pb-2 border-bottom"></h2>
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <div class="col d-flex align-items-start">
+          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+           <img src="./images/check2-circle.svg" alt="check 2 circle image">
+          </div>
+          <div>
+            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <p>So easy to use, even your dog could do it.</p>
+            <!-- <a href="#" class="btn btn-primary">
+              Primary button
+            </a> -->
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+           <img src="./images/mortarboard-fill.svg" alt="">
+          </div>
+          <div>
+            <h3 class="fs-2 text-body-emphasis">Elite Clientele.</h3>
+            <p>We have all the dogs, the greatest dogs..</p>
+            <!-- <a href="#" class="btn btn-primary">
+              Primary button
+            </a> -->
+          </div>
+        </div>
+        <div class="col d-flex align-items-start">
+          <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
+           <img src="./images/arrow-through-heart.svg" alt="Arrow through heart">
+          </div>
+          <div>
+            <h3 class="fs-2 text-body-emphasis">Featured title</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+            <!-- <a href="#" class="btn btn-primary">
+              Primary button
+            </a> -->
+          </div>
+        </div>
+      </div>
+      <div class="my-5">
+        <div class="p-5 text-center bg-body-tertiary">
+          <div class="container py-5">
+            <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+              TinDog. Woof."</h2>
+            <img class="profile-img mt-5" src="./images/dog-img.jpg" alt="dog image">
+            <p class="col-lg-8 mx-auto lead mt-2">
+              Pebbles, New York
+            </p>
+          </div>
+    <div class="row">
+      <div class="col-lg-3 col-sm-12">
+        <img src="./images/techcrunch.png" alt="techcrunch" height="30">
+      </div>
+      <div class="col-lg-3 col-sm-12">
+        <img src="./images/mashable.png" alt="mashable" height="30">
+      </div>
+      <div class="col-lg-3 col-sm-12">
+        <img src="./images/bizinsider.png" alt="bizinsider" height="30">
+      </div>
+      <div class="col-lg-3 col-sm-12">
+        <img src="./images/tnw.png" alt="tnw" height="30">
+      </div>
+    </div>
+  </div>
   </section>
   <!-- Pricing -->
   <section id="pricing">
@@ -80,7 +144,7 @@
               <li>Priority email support</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+            <button type="button" class="w-100 btn btn-lg out-primary">Get started</button>
           </div>
         </div>
       </div>
